--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <!-- Container with class "main" -->
     <div class="main">
         <!-- Heading with class and id "heading" -->
-        <h1 class="heading" id="heading">This is a Heading</h1>
+        <h class="heading" id="heading">This is a Heading</h>
     </div>
 </body>
 </html>
